# ash_lang

./: Cargo.toml  README.md  index.html  perf.data  perf.data.old
.github/workflows/: rust_release.yml
examples/: bubbleSort.ash  counter.ash  factorial.ash  math_eval.ash  pascals_triangle.ash  sieve_primes.ash  strings.ash
pkg/: ash_lang.d.ts  ash_lang.js  ash_lang_bg.wasm  ash_lang_bg.wasm.d.ts  package.json
src/: built_in.rs  code.ash  code.py  interpreter.rs  lexer.rs  main.rs  nodes.rs  parser.rs  scope.rs  tokens.rs  utils.rs  values.rs
src/lib/: built_in.rs  formatter.rs  interpreter.rs  lexer.rs  lib.rs  nodes.rs  parser.rs  scope.rs  tokens.rs  utils.rs  values.rs
