[package]
name = "ash_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
ordered-float = { version = "3.0", default-features = false }

[[bin]]
name="ash_lang_cli"
path = "src/main.rs"


[lib]
name = "ash_lang"
path = "src/lib/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
debug = false